@@ -41,7 +41,7 @@ src_evaluate_SOURCES = src-evaluate.c calc_snr.c util.c
 src_evaluate_CFLAGS = @SNDFILE_CFLAGS@ @FFTW3_CFLAGS@
 src_evaluate_LDADD = $(SNDFILE_LIBS) $(FFTW3_LIBS)
 
-benchmark_CFLAGS = $(AM_CFLAGS)
+benchmark_CFLAGS = $(AM_CFLAGS) @FFTW3_CFLAGS@
 benchmark_SOURCES = benchmark.c  util.c calc_snr.c
 benchmark_LDADD  = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS)
 
@@ -50,14 +50,14 @@ benchmark_LDADD  = $(SAMPLRATEDIR)/libsamplerate.la $(FFTW3_LIBS)
 check: $(noinst_PROGRAMS)
 	date
 	uname -a
-	./misc_test$(EXEEXT)
-	./termination_test$(EXEEXT)
-	./simple_test$(EXEEXT)
-	./callback_test$(EXEEXT)
-	./reset_test$(EXEEXT)
-	./multi_channel_test$(EXEEXT)
-	./float_short_test$(EXEEXT)
-	./snr_bw_test$(EXEEXT)
+	./misc_test
+	./termination_test
+	./simple_test
+	./callback_test
+	./reset_test
+	./multi_channel_test
+	./float_short_test
+	./snr_bw_test
 	@echo "-----------------------------------------------------------------"
 	@echo "  ${PACKAGE}-${VERSION} passed all tests."
 	@echo "-----------------------------------------------------------------"
